Fix song playing animation on safari

--- a/src/components/Core/common/SongList/SongList.scss
+++ b/src/components/Core/common/SongList/SongList.scss
@@ -70,7 +70,7 @@
 
       .playingAnimation {
         position: absolute;
-        border-radius: 3px;
+        border-radius: inherit;
         left: 0;
         right: 0;
         top: 0;
@@ -130,50 +130,53 @@
 }
 
 .playingAnimation {
-  display: flex;
+  > div {
+    display: flex;
+    align-items: flex-end;
 
-  span {
-    display: inline-block;
-    bottom: 0px;
-    width: 3px;
-    height: 5px;
-    background: #fe2851;
-    animation: audio-wave 0.95s infinite ease-in-out;
-    align-self: flex-end;
-    margin-left: 1px;
+    span {
+      display: inline-block;
+      align-self: flex-end;
+      bottom: 0;
+      width: 3px;
+      height: 5px;
+      background: #fe2851;
+      animation: audio-wave 0.95s infinite ease-in-out;
+      margin-left: 1px;
 
-    &:nth-child(2) {
-      animation-delay: 0.2s;
+      &:nth-child(2) {
+        animation-delay: 0.2s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 0.8s;
+      }
+
+      &:nth-child(4) {
+        animation-delay: 0.6s;
+      }
+
+      &:nth-child(5) {
+        animation-delay: 0.3s;
+      }
     }
+  }
 
-    &:nth-child(3) {
-      animation-delay: 0.8s;
+  @keyframes audio-wave {
+    0% {
+      height: 5px;
     }
-
-    &:nth-child(4) {
-      animation-delay: 0.6s;
+    25% {
+      height: 10px;
     }
-
-    &:nth-child(5) {
-      animation-delay: 0.3s;
+    50% {
+      height: 8px;
     }
-  }
-}
-
-@keyframes audio-wave {
-  0% {
-    height: 5px
-  }
-  25% {
-    height: 10px
-  }
-  50% {
-    height: 8px
-  }
-  50% {
-    height: 10px;
-  }
-  100% {
-    height: 5px;
+    50% {
+      height: 10px;
+    }
+    100% {
+      height: 5px;
+    }
   }
 }
